# sam-s3

./: .env.template  .gitignore  README.md  main.py  poe_tasks.toml  pyproject.toml  samconfig.toml  template.yaml
.github/: dependabot.yml
public/: index.html
src/sam_s3/: __init__.py  cli.py  cloudformation_outputs.py  config_types.py  lib.py  s3_object_ops.py  stack_outputs.py
